@@ -14,6 +14,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***  Add --error-limit option.  [Stefan Thiede]
 
+***  Allow __ in cell names by quoting them in C.  [Stefan Thiede]
+
 **** Fix genvar to be signed, so "< 0" works properly.  [Niranjan Prabhu]
 
 **** Fix assignments to inputs inside functions/tasks.  [Patricio Kaplan]
